--- a/consulta.html
+++ b/consulta.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
@@ -63,6 +64,13 @@
         <select class="form-control" id="ano">
           <option value="">Ano</option>
           <option value="2018">2018</option>
+          <option value="2019">2019</option>
+          <option value="2020">2020</option>
+          <option value="2021">2021</option>
+          <option value="2022">2022</option>
+          <option value="2023">2023</option>
+          <option value="2024">2024</option>
+          <option value="2025">2025</option>
         </select>
       </div>
 
@@ -90,7 +98,7 @@
 
       <div class="col-md-6">
         <select class="form-control" id="tipo">
-          <option>Tipo</option>
+          <option value="">Tipo</option>
           <option value="1">Alimentação</option>
           <option value="2">Educação</option>
           <option value="3">Lazer</option>
@@ -110,7 +118,7 @@
       </div>
 
       <div class="col-md-2 d-flex justify-content-end">
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="btn btn-primary" onclick="pesquisarDespesa()">
           <i class="fas fa-search"></i>
         </button>
       </div>
@@ -130,9 +138,29 @@
           </thead>
 
           <tbody id="listaDespesas">
-          
+
           </tbody>
         </table>
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="apagaDespesa" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div id="modal_titulo_div" class="border-0">
+          <h5 class="modal-title" id="modal_apagar">Confirmar Exclusão</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id="modal_conteudo">
+          Você tem certeza que deseja apagar esta despesa?
+        </div>
+        <div class="modal-footer border-0">
+          <button type="button" class="btn btn-danger" id="btnConfirmarExclusao">Apagar</button>
+          <button type="button" class="class=" btn btn-secondary" data-dismiss="modal" id="modal_btn">Voltar</button>
+        </div>
       </div>
     </div>
   </div>
